# accurate

./: .gitignore  README.md
accurate-nlp/: optimal.py  overfit.Rmd  overfit.py  raw.Rmd
accurate-nlp/results/: overfit.csv
backend/: Cargo.toml  server.py
backend/src/: api.rs  logging.rs  main.rs
backend/static/js/: index.js
backend/tensor-talk/: talk.py
frontend/: index.html
frontend/assets/css/: style.css
frontend/assets/js/: index.js
pitch-ppt/: README.md
pitch-presentation/: PITCH.md  README.md
social-spider/: Cargo.toml  testing.txt
social-spider/src/: crawl.rs  logging.rs  main.rs
social-spider/src/process/: mod.rs  post.rs  source.rs
web/: index.html
web(backend)/static/styles/: style.css
web(backend)/templates/: index.html
web/assets/css/: style.css
