[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_qs = "0.8.5" # Serde URL/URI
serde_json = "1.0.68" # Serde JSON
serde = { version = "1.0.130", features = ["derive"] } # Easy, generic, serialisation and deserialisation
log = "0.4.14" # Best logging facade
fern = { version = "0.6.0", features = ["colored"] } # Nice logging backend
tokio = { version = "1.12.0", features = ["full"] } # Best concurrency library around
hyper = { version = "0.14.13", features = ["full"] } # Best HTTP library around
chrono = "0.4.19" # Date and time
clap = "3.0.0-beta.5" # CLI parser

