[package]
name = "social-spider"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Hyper fast HTTP library
hyper = { version = "0.14.13", features = ["full"] }

# SSL support for Hyper
hyper-tls = "0.5.0"

# The best async library for Rust. Ever.
tokio = { version = "1.12.0", features = ["full"] }

# Universal logging faccade
log = "0.4.14"

# Backend for "log"
fern = { version = "0.6.0", features = ["colored"] }

# CLI argument parser
clap = "2.33.3"

# HTML parsing library. Fast!
scraper = "0.12.0"

# Superset of the "time" library
chrono = "0.4.19"

# Dealing with futures! Async computing, not stocks :)
futures = "0.3.17"

# Pretty much the only serialisation/deserialisation library for Rust. And it rocks!
serde = "1.0.130"

# JSON backend for serde
serde_json = "1.0.68"

